# getdate

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/getdate/: __init__.py  getdate.py
